tests/fixtures/syntax/valid/comment_after_case_block_open.repor
case "comment after case block open" { # trailing comment on the case open line
  $ true
  assert {
    exit 0
  }
}
